fix layout on mobile

--- a/web/src/components/SearchResults/searchResults.scss
+++ b/web/src/components/SearchResults/searchResults.scss
@@ -35,3 +35,22 @@
     }
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .search-results {
+    .car {
+      flex-direction: column !important;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+
+      iframe {
+        width: 100% !important;
+        margin-left: 0 !important;
+        margin-top: 16px;
+      }
+    }
+  }
+}
